# CppHomework

./: CMakeLists.txt  README.md  args_run.cpp  args_run.h  main.cpp  utils.cpp  utils.h
report2/: grade.cpp  grade.h  works.cpp  works.h
report3/: Administrator.cpp  Administrator.h  ArrayFirstIndex.cpp  ArrayFirstIndex.h  Employee.cpp  Employee.h  Pairs.cpp  Pairs.h  SalariedEmployee.cpp  SalariedEmployee.h  TestAdministrator.cpp  TestAdministrator.h  TestAll.cpp  TestAll.h  TestArrayFirstIndex.cpp  TestArrayFirstIndex.h  TestPairs.cpp  TestPairs.h
reprot1/: works.cpp  works.h
